--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -41,16 +41,12 @@
     color:black;
     margin: 0 8px;
 }
-.option a:hover{
-    background-color: #f5ca7b;
-    border-radius:10px;
-    height: 100%;
-    width: calc(100%+30px);
-    transition: 0.4s ease-out;
-}
+
 
 .option a:hover > li{
+    transition: 0.4s ease-out;
     color:white;
+    filter: drop-shadow(0 0 0.3rem #f5ca7b);
 }
 
 @media screen and (max-width: 615px) {
